# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.29.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix wrong usage of ATTRIBUTE_NONNULL for Node *root (caused even
	  segfaults), see http://bugs.gentoo.org/show_bug.cgi?id=483392
	- Fix cache-method sqlite: Set overlay_key in read versions, see
	  http://bugs.gentoo.org/show_bug.cgi?id=480604

*eix-0.29.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add EIX_LIMIT{,_COMPACT} as a safety measurement for typos.
	  This solves somewhat http://bugs.gentoo.org/show_bug.cgi?id=346665

*eix-0.29.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix random bugs for masks with slot and no subslot
	- Fix eix-update: Make long option --override-method work
	- Fix eix-update: ebuild*: export PORTAGE_REPO_NAME and a rudimentary
	  PORTAGE_ECLASS_LOCATIONS (>=portage-2.2.0_alpha89 needs it),
	  see http://bugs.gentoo.org/show_bug.cgi?id=478320
	- Fix colorless output: http://bugs.gentoo.org/show_bug.cgi?id=478818
	- Read also PORTAGE_REPOS_CONF /usr/share/portage/config/repos.conf
	- Fix zsh-completion: use _call_program, force DEFAULT_FORMAT=normal
	- manpage: cosmetical fixes

*eix-0.29.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fallback to PORTDIR=/usr/portage, see
	  http://forums.gentoo.org/viewtopic-p-7349870.html
	- Make --installed-slot work again (regression from 0.26.0).
	  Thanks to Vikraman <vikraman at gentoo.org> for finding and fixing,
	  see http://bugs.gentoo.org/show_bug.cgi?id=475564
	- Fix md5 algorithm for files of 8192 bytes or longer (serious bug
	  from the beginning which made md5-cache for longer ebuilds invalid).
	- Fix possible memory leaks.

*eix-0.29.0
	Артём Воротников <skybon at gmail.com>:
	- Russian translation updates

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- eix-sync now calls eix-remote add1/add2 by default if necessary
	- Support /etc/portage/repos.conf, honouring priority values